correct alignment of popup widows

--- a/css/style.css
+++ b/css/style.css
@@ -109,19 +109,22 @@ div h1 h3{
 }
 div form{
     display: inline-block;
-    padding: 2%;
+    padding-right: 2%;
+    padding-top: 5px;
+    padding-left: 2%;
     background-color: rgb(136, 136, 201);
     box-sizing: border-box;
     width: 50%;
     height: 300px;
     text-align: justify;
     font-size: large;
-    
-    margin-right: 5px;
+    margin-top: 3px;
+    margin-right: 1px;
 }
 .contact-iframe{
+    margin-top: 20px;
     align-items: center;
-    padding-left: 10px;
+   
 }
 footer h3{
     font-size: large    
